# dummy

./: README.md  pyproject.toml
src/dummy/: cli.py
