[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@siemens.com>"]
readme = "README.md"
packages = [{include = "dummy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
