[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Eric L Frederich <eric.frederich@siemens.com>"]
readme = "README.md"
packages = [{include = "dummy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.13.0"

[tool.poetry.scripts]
dummy = 'dummy.cli:cli_main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
